plugins {
   id("com.diffplug.spotless") version "7.0.0" apply true
   id 'java'
}
subprojects {
  apply plugin: "java"
  java { toolchain { languageVersion = JavaLanguageVersion.of(21) } }
  repositories { mavenCentral() }
  group = "com.yourco.ddz"; version = "0.1.0-SNAPSHOT"
//  tasks.withType(Test).configureEach { useJUnitPlatform() }

  apply plugin: "com.diffplug.spotless"
  spotless {
    java {
      target("src/**/*.java")
      googleJavaFormat() // Use Google Java Format
    }
  }
  tasks.withType(JavaCompile).configureEach {
        dependsOn tasks.named('spotlessApply')
    }
}
